feat: GetControlProgram
